Fix the long names pulling the site right on mobile

--- a/source/stylesheets/pages/_homepage.scss
+++ b/source/stylesheets/pages/_homepage.scss
@@ -43,7 +43,9 @@ section {
 
       .speaker {
         @include span-columns(1 of 4);
+        overflow: hidden;
         text-align: center;
+        text-overflow: ellipsis;
 
         .avatar {
           img {
